# polymer_rediscover

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/benchmark/: README.md  example_oral_polymer_ranking.jsonl
data/dailymed/: README.md
data/fda_iid/: README.md
data/schema/: README.md  candidate_polymers_example.tsv  candidate_polymers_seed.tsv  polymer_synonyms_example.tsv  polymer_synonyms_seed.tsv
docs/: benchmark_schema.md  data_setup.md  project_scope.md
src/polymer_rediscover/: __init__.py  assemble.py  backbones.py  benchmark.py  cli.py  dailymed.py  evaluate.py  fda_iid.py  normalization.py  project.py  schema.py  tabular.py
tests/: test_assemble.py  test_benchmark.py  test_cli.py  test_dailymed.py  test_fda_iid.py  test_normalization.py
