[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polymer-rediscover"
version = "0.1.0"
description = "FDA-aware polymer excipient ranking for oral solid formulation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Haoran and Codex" }
]
dependencies = []

[project.scripts]
polymer-rediscover = "polymer_rediscover.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
